# gestureparser

./: .gitignore  .gitmodules  .travis.yml  Appunti  CMakeLists.txt  GrammarRule.h  README.md  Titolo  associazione riga della regola gesto  command.txt  compila.sh  gen_files_accuracy_evaluation.cpp  grammar.txt  hand-main.cpp  main-semidef.cpp  main.cpp  probabilistic.bson  risultati  sentence.txt  test.sh  test_2019-03-01_17_01_40  test_earley.cc  testing.cpp  train-main.cpp  training-testing.cpp
Grafici/: grafici.m
dataset/: corrompere_immagini.m  dataset-mauro  dataset-mauro-scaled-and rotated  dataset-mauro-unipd  dataset.json  dataset_new.model  dataset_testing.model  feature_mauro  prob.khr  sort_testset  specchia_immagini.sh  statistiche  svm-predict  svm-scale  svm-train  testset  testset-mauro-unipd  testset.json  testset0
dataset_new/: Link dataset.txt  dataset-mauro  estrazione_features_mauro.m  genera_dataset.m  soglia.m  testset-mauro
earley/: CMakeLists.txt  EarleyParser.h  earley-main.cpp  earley-main_orig.cpp  earley-parser.cpp  parse_sentence  parse_sentence.cpp
hand-recognizer/: CMakeLists.txt  Dataset.cpp  Dataset.hpp  FeaturesExtraction.cpp  FeaturesExtraction.hpp  InputGenerator.cpp  InputGenerator.hpp  KinectDevice.cpp  KinectDevice.hpp  MISCELLANEOUS  Utils.cpp  Utils.hpp  VectorsUtils.cpp  VectorsUtils.hpp  a.out  data.json  hand-recognizer.h  main.cpp  per compilare.txt  svm.cpp  svm.h  train.h
hand-recognizer/dataset/: dataset  dataset.model  prob.khr  sort_dataset  svm-predict  testset  testset.json
hand-recognizer/input/: sentence.txt
hand-recognizer/libsvm-3.21/: classify  dataset  dataset.scale  dataset.scale.model  output  scaling  svm-train  svm-train.c  svm.cpp  testset  testset.scale
hand-recognizer/web/: ._index.html  index.html
input/: ListOfTerminals  ProbabilisticParser  comandi_corretti_gesti.txt  comandi_corretti_labels.txt  corpus_string.txt  probabilistic.bson  sentence-hr.txt  sentence.txt
libsvm/: CMakeLists.txt  svm.cpp
pcfg/: CFG_string_cnf.txt  CMakeLists.txt  corpus_string.txt  earley-main.cpp  earley-parser.cpp  pcfg-infer.cpp  pcfg.out  test_earley.cc
pcfg/earley/: CMakeLists.txt  EarleyParser.h
pcfg/pcfg-train/: EMTrainer.hpp  InsideOutsideCache.hpp  InsideOutsideCalculator.hpp  PCFGRule.hpp  ProbabilisticContextFreeGrammar.hpp  Signature.hpp
pcfg/utils/: ProbabilityDistributions.h
python_accuracy_evaluation/: accuracy_evaluation.py  dataset.txt  file_accuracy_evaluation_labels  file_accuracy_evaluation_predicted_rotated  file_accuracy_evaluation_predicted_testset  file_per_precision_e_recall_labels_testset  file_per_precision_e_recall_predicted_scaled  file_per_precision_e_recall_predicted_scaled_rotated  file_per_precision_e_recall_predicted_tutto  rotated.txt  scaled.txt  scaled_rotated.txt  testset.txt
risultati/: grafici.xlsx  test_2019-03-02_14_48_22  test_2019-03-03_00_44_28  test_2019-03-03_05_03_22  test_2019-03-03_09_23_30  test_2019-03-03_13_02_45  test_2019-03-03_18_36_04  test_2019-03-04_10_11_47  test_2019-03-05_10_16_46  test_2019-03-07_12_25_57  test_2019-03-08_19_47_01  test_2019-03-21_15_48_15  test_2019-03-24_13_21_30  test_2019-04-28_20_29_43  test_2019-04-28_20_29_43.csv  test_2019-05-20_18_36_19  test_2019-05-20_18_36_19.csv  test_2019-06-26_17_09_38  test_2019-06-26_17_09_38.csv  test_2019-06-26_17_12_38  test_2019-06-26_17_12_38.csv  test_no_script  test_no_script_2019_04_28-17_18  test_no_script_2019_04_28-17_18.csv  testing_parser_condizioni_reali
testset/0/: 0_1.tif  0_10.tif  0_11.tif  0_12.tif  0_13.tif  0_14.tif  0_15.tif  0_17.tif  0_18.tif  0_19.tif  0_20.tif  0_21.tif  0_22.tif  0_23.tif  0_24.tif  0_25.tif  0_26.tif  0_27.tif  0_28.tif  0_29.tif  0_30.tif  0_5.tif  0_7.tif  0_9.tif
testset/1/: 1_10.tif  1_11.tif  1_12.tif  1_13.tif  1_14.tif  1_15.tif  1_16.tif  1_17.tif  1_18.tif  1_19.tif  1_2.tif  1_20.tif  1_21.tif  1_22.tif  1_23.tif  1_24.tif  1_25.tif  1_26.tif  1_27.tif  1_28.tif  1_29.tif  1_3.tif  1_30.tif  1_4.tif  1_5.tif  1_6.tif  1_7.tif  1_8.tif  1_9.tif
testset/2/: 2_1.tif  2_10.tif  2_11.tif  2_12.tif  2_13.tif  2_14.tif  2_15.tif  2_16.tif  2_17.tif  2_18.tif  2_19.tif  2_2.tif  2_20.tif  2_21.tif  2_22.tif  2_23.tif  2_24.tif  2_25.tif  2_26.tif  2_27.tif  2_28.tif  2_29.tif  2_3.tif  2_30.tif  2_4.tif  2_6.tif  2_8.tif  2_9.tif
testset/3/: 3_1.tif  3_10.tif  3_12.tif  3_13.tif  3_14.tif  3_16.tif  3_17.tif  3_19.tif  3_2.tif  3_20.tif  3_21.tif  3_22.tif  3_23.tif  3_24.tif  3_25.tif  3_26.tif  3_27.tif  3_28.tif  3_29.tif  3_3.tif  3_30.tif  3_4.tif  3_5.tif  3_6.tif  3_7.tif  3_8.tif  3_9.tif
testset/4/: 4_1.tif  4_10.tif  4_11.tif  4_12.tif  4_13.tif  4_14.tif  4_15.tif  4_16.tif  4_17.tif  4_19.tif  4_2.tif  4_20.tif  4_21.tif  4_22.tif  4_24.tif  4_25.tif  4_26.tif  4_27.tif  4_28.tif  4_29.tif  4_3.tif  4_30.tif  4_4.tif  4_5.tif  4_6.tif  4_8.tif  4_9.tif
testset/5/: 5_1.tif  5_11.tif  5_12.tif  5_15.tif  5_16.tif  5_17.tif  5_18.tif  5_19.tif  5_2.tif  5_20.tif  5_21.tif  5_22.tif  5_23.tif  5_24.tif  5_25.tif  5_26.tif  5_27.tif  5_28.tif  5_29.tif  5_3.tif  5_30.tif  5_4.tif  5_5g.tif  5_6.tif  5_6g.tif  5_8.tif  5_8g.tif  5_9g.tif
(+211 files in other folders)
